--- a/Chidroop I_BMM.html
+++ b/Chidroop I_BMM.html
@@ -401,7 +401,7 @@
 
 
         <div class="header-nav-item js-nav-list-common header-nav-item-list header-nav-item-overline header-nav-item-underline">
-                                                    <a class="    " href="Chidroop I.html">Event Posters
+                                                    <a class="    " href="index.html">Event Posters
               
                               </a>
               
